Bug 190899 - REGRESSION (r237255): Text selection is broken in form fields
Summary: REGRESSION (r237255): Text selection is broken in form fields
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ali Juma
URL:
Keywords: InRadar, Regression
: 190905 (view as bug list)
Depends on: 189833
Blocks:
  Show dependency treegraph
 
Reported: 2018-10-25 02:25 PDT by Simon Fraser (smfr)
Modified: 2018-10-26 06:16 PDT (History)
10 users (show)

See Also:


Attachments
Example of breakage with overflow:hidden (248 bytes, text/html)
2018-10-25 11:31 PDT, Daniel Bates
no flags Details
Patch (3.78 KB, patch)
2018-10-25 12:54 PDT, Ali Juma
no flags Details | Formatted Diff | Diff
Archive of layout-test-results from ews206 for win-future (12.68 MB, application/zip)
2018-10-25 14:46 PDT, EWS Watchlist
no flags Details
Patch (4.28 KB, patch)
2018-10-25 15:03 PDT, Ali Juma
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Fraser (smfr) 2018-10-25 02:25:21 PDT
When I move my cursor to select a chunk of text, the text I have selected is not highlighted or only partially highlighted.
Comment 1 Wenson Hsieh 2018-10-25 02:26:26 PDT
<rdar://problem/45456392>
Comment 2 Daniel Bates 2018-10-25 11:30:16 PDT
*** Bug 190905 has been marked as a duplicate of this bug. ***
Comment 3 Daniel Bates 2018-10-25 11:31:57 PDT
Created attachment 353096 [details]
Example of breakage with overflow:hidden

For convenience, attached the example page from bug #190905.
Comment 4 Ali Juma 2018-10-25 12:52:43 PDT
*** Bug 190905 has been marked as a duplicate of this bug. ***
Comment 5 Ali Juma 2018-10-25 12:54:38 PDT
Created attachment 353101 [details]
Patch
Comment 6 EWS Watchlist 2018-10-25 14:46:46 PDT
Comment on attachment 353101 [details]
Patch

Attachment 353101 [details] did not pass win-ews (win):
Output: https://webkit-queues.webkit.org/results/9729658

New failing tests:
fast/repaint/text-selection-overflow-hidden.html
Comment 7 EWS Watchlist 2018-10-25 14:46:58 PDT
Created attachment 353111 [details]
Archive of layout-test-results from ews206 for win-future

The attached test failures were seen while running run-webkit-tests on the win-ews.
Bot: ews206  Port: win-future  Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Comment 8 Ali Juma 2018-10-25 15:03:32 PDT
Created attachment 353112 [details]
Patch

Add baseline for Windows
Comment 9 WebKit Commit Bot 2018-10-26 06:16:14 PDT
Comment on attachment 353112 [details]
Patch

Clearing flags on attachment: 353112

Committed r237449: <https://trac.webkit.org/changeset/237449>
Comment 10 WebKit Commit Bot 2018-10-26 06:16:16 PDT
All reviewed patches have been landed.  Closing bug.