REGRESSION (r237255): Text selection is broken in form fields https://bugs.webkit.org/show_bug.cgi?id=190899

Reviewed by Ryosuke Niwa.

Source/WebCore:

Fix missing negation when checking for a fully-clipped-out rect. This was causing
RenderObject::computeVisibleRectInContainer to incorrectly early-out.

Test: fast/repaint/text-selection-overflow-hidden.html

* rendering/RenderObject.cpp:
(WebCore::RenderObject::computeVisibleRectInContainer const):

LayoutTests:

Add layout test coverage.

* fast/repaint/text-selection-overflow-hidden-expected.txt: Added.
* fast/repaint/text-selection-overflow-hidden.html: Added.
* platform/win/fast/repaint/text-selection-overflow-hidden-expected.txt: Added.


Canonical link: https://commits.webkit.org/205783@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237449 268f45cc-cd09-0410-ab3c-d52691b4dbfc